--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -39,7 +39,7 @@
                         </li>
                     </ul>
                     <h4>Dernières Maj</h4>
-                    {{ render(controller("AppBundle:App:menu", {'limit': 3})) }}
+                    {{ render(controller("CoreBundle:Core:menu", {'limit': 3})) }}
                 </div>
                 <div id="content" class="col-md-9">
                     {% block body %}
