Page d'ajout d'une catégorie racine avec le formulaire

--- a/src/CoreBundle/Resources/views/Tree/addCategory.html.twig
+++ b/src/CoreBundle/Resources/views/Tree/addCategory.html.twig
@@ -22,9 +22,9 @@
     </div>
 
     <h2>Add Category</h2>
-    
+
     <div class="well">
-form
+        {{ form(form) }}
     </div>
 
 {% endblock %}
