--- a/src/CoreBundle/Resources/views/Tree/addCategory.html.twig
+++ b/src/CoreBundle/Resources/views/Tree/addCategory.html.twig
@@ -24,7 +24,7 @@
     <h2>Add Category</h2>
 
     <div class="well">
-        {{ form(form) }}
+        {{ include("CoreBundle:Tree:addCategoryForm.html.twig") }}
     </div>
 
 {% endblock %}
