Page d'ajout d'une catégorie avec choix parent mis en forme grâce à l'automatisme de symfony avec boostrap

--- a/src/CoreBundle/Resources/views/Tree/addCategory.html.twig
+++ b/src/CoreBundle/Resources/views/Tree/addCategory.html.twig
@@ -24,7 +24,7 @@
     <h2>Add Category</h2>
 
     <div class="well">
-        {{ include("CoreBundle:Tree:addCategoryForm.html.twig") }}
+        {{ form(form) }}
     </div>
 
 {% endblock %}
