--- a/src/CoreBundle/Resources/views/Includes/tree.html.twig
+++ b/src/CoreBundle/Resources/views/Includes/tree.html.twig
@@ -1,7 +1,7 @@
 <!--includes/tree.html-->
 {% for link in links %}
     <li>
-        <a href="{{ link.slug }}">{{ link.title }}</a>
+        <a href="{{ path('view_category', {'slug': link.slug}) }}">{{ link.title }}</a>
         {% if link.__children %}
             <ul>
                 {% include "CoreBundle:Includes:tree.html.twig" with {'links': link.__children} %}
