--- a/src/CoreBundle/Resources/views/Tree/viewCategory.html.twig
+++ b/src/CoreBundle/Resources/views/Tree/viewCategory.html.twig
@@ -36,7 +36,9 @@
             {% for item in listItems %}
                 <li class="list-group-item">
                     <h3>
-                        {{ item.title }}                    
+                        <a href="{{ path('view_item', {'id': item.id}) }}">
+                        {{ item.title }}   
+                        </a>
                     </h3>
                 </li>
             {% endfor %}
