Vue d'ajout d'une partie

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -39,7 +39,12 @@
                         </li>
                         <li>
                             <a href="{{ path('add_category') }}" class="btn btn-default">
-                                Add Category
+                                Add Category ( ne marche pas bien )
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('add_partie') }}" class="btn btn-default">
+                                Ajouter une Partie
                             </a>
                         </li>
                     </ul>
