Vue d'ajout d'un chapitre

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -47,6 +47,11 @@
                                 Ajouter une Partie
                             </a>
                         </li>
+                        <li>
+                            <a href="{{ path('add_chapitre') }}" class="btn btn-default">
+                                Ajouter un chapitre
+                            </a>
+                        </li>
                     </ul>
                     <h4>Dernières Maj</h4>
                     {{ render(controller("CoreBundle:Core:menu", {'limit': 3})) }}
